# MyonCore

./: .gitmodules  CMakeLists.txt  flake.nix  shell.nix
myongraphics/: CMakeLists.txt
myongraphics/include/: myongraphics.h  myongraphics_enums.h  myongraphics_func.h  myongraphics_impl.h  myongraphics_internal.h  myongraphics_structs.h
myongraphics/include/metal/: myon_metal.h  myon_metaldevice.h
myongraphics/src/: myongraphics_instance.c  myongraphics_physicaldevice.c
myonruntime/: CMakeLists.txt
myonruntime/include/: MyonRuntime.hpp
myonruntime/include/MyonRuntime/Core/: Log.hpp  Runtime.hpp  Window.hpp
myonruntime/include/MyonRuntime/Graphics/: Graphics.hpp  GraphicsDevice.hpp  GraphicsInstance.hpp  GraphicsSurface.hpp  GraphicsSwapChain.hpp
myonruntime/src/MyonRuntime/Core/: Log.cpp  Runtime.cpp  Window.cpp
myonruntime/src/MyonRuntime/Graphics/: Graphics.cpp  GraphicsDevice.cpp  GraphicsInstance.cpp  GraphicsSurface.cpp  GraphicsSwapchain.cpp
myonruntime/src/MyonRuntime/Utils/: Defines.cpp
